添加面向开发者的绑定虚拟号码 API
